# Neural-Network-Parallelization

./: README.md
matlab_code/: benchmarkCompare.m  benchmarkMPI.m  benchmarkOCL.m  benchmarkOMP.m  benchmarkPThreads.m  benchmarkSerial.m  benchmarkXeonPhi.m  demo.m  demoDebug.m  demoDisplay.m  demoMNIST.m  demoPredict.m  displayData.m  displayLabels.m  gradientDescent.m  (+1 more)
neural_network/: CMakeLists.txt  benchmark.cpp  demo.cpp  helpers.h  neuralnetwork.cpp  neuralnetwork.h  readwrite.cpp  run_benchmarks.sh
neural_network/benchmarks/: N10000-H25-I100.txt  N10000-H25-I200.txt  N10000-H25-I50.txt  N20000-H25-I200.txt  N30000-H25-I50.txt  N40000-H25-I150.txt  N50000-H25-I50.txt  N60000-H25-I100.txt  N60000-H25-I150.txt  N60000-H25-I200.txt
neural_network_pthreads/: CMakeLists.txt  benchmark.cpp  demo.cpp  helpers.cpp  neuralnetwork_pthreads.cpp  neuralnetwork_pthreads.h  run_benchmarks.sh
neural_network_pthreads/benchmarks/: meritve.txt
neural_network_pthreads/benchmarks/raw/: N10000-H25-I100-T1.txt  N10000-H25-I100-T16.txt  N10000-H25-I100-T2.txt  N10000-H25-I100-T4.txt  N10000-H25-I100-T8.txt  N15000-H25-I100-T1.txt  N15000-H25-I100-T16.txt  N15000-H25-I100-T2.txt  N15000-H25-I100-T4.txt  N15000-H25-I100-T8.txt  N20000-H25-I100-T1.txt  N20000-H25-I100-T16.txt  N20000-H25-I100-T2.txt  N20000-H25-I100-T4.txt  N20000-H25-I100-T8.txt  N25000-H25-I100-T1.txt  N25000-H25-I100-T16.txt  N25000-H25-I100-T2.txt  N25000-H25-I100-T4.txt  N25000-H25-I100-T8.txt  N5000-H25-I100-T1.txt  N5000-H25-I100-T16.txt  N5000-H25-I100-T2.txt  N5000-H25-I100-T4.txt  N5000-H25-I100-T8.txt
(+186 files in other folders)
